--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
 streamlit==1.28.1
-pygame==2.5.0
 pillow==10.0.1
 numpy==1.24.3
-pandas==2.0.3
+matplotlib==3.7.2
 plotly==5.17.0
-protobuf==3.20.3
-markdown==3.4.4
-jinja2==3.1.2
-itsdangerous==2.1.2
-click==8.1.7
-blinker==1.6.3
-cachetools==5.3.1
-gitpython==3.1.32
-pydeck==0.8.0
-pympler==1.0.1
-python-dateutil==2.8.2
-pytz==2023.3
-requests==2.31.0
-semver==3.0.1
-toml==0.10.2
-typing-extensions==4.7.1
-tzdata==2023.3
+pandas==2.0.3
