--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ numpy==1.24.3
 matplotlib==3.7.2
 plotly==5.17.0
 pandas==2.0.3
+pygame-ce==2.3.2  # pygame-ce is more compatible than regular pygame
