--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.28.1
-matplotlib==3.7.2
-pillow==10.0.1
-numpy==1.24.3
-pandas==2.0.3
+streamlit>=1.45
+pillow>=10.0.0
+numpy>=1.26.0
+matplotlib>=3.8.0
+plotly>=5.18.0
+pandas>=2.2.0
